--- a/About.html
+++ b/About.html
@@ -115,7 +115,7 @@
       <a href="#">
         <img src="img/logo.png" alt="PW Logo" class="logo" />
       </a>
-      <a href="index.html">Course.zone0768</a>
+      <a href="index.html">Course.zone0786</a>
       <a href="index.html">Home</a>
       <a href="About.html" class="active">About Us</a>
       <a href="Connect.html">Connect Us!</a>
@@ -207,7 +207,7 @@
 
       <div class="social">
         <a href="#"><i class="fa-brands fa-youtube"></i></a>
-        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://www.instagram.com/course.zone0786?igsh=MWxvdjl0MGg2MGJiOA=="><i class="fa-brands fa-instagram"></i></a>
       </div>
     </footer>
   </body>
