--- a/Connect.html
+++ b/Connect.html
@@ -102,7 +102,7 @@
       <a href="#">
         <img src="img/logo.png" alt="PW Logo" class="logo" />
       </a>
-      <a href="index.html">Course.zone0768</a>
+      <a href="index.html">Course.zone0786</a>
       <a href="index.html">Home</a>
       <a href="About.html">About Us</a>
       <a href="Connect.html" class="active">Connect Us!</a>
@@ -110,7 +110,9 @@
 
     <div class="container">
       <h1>Connect Us</h1>
-      <form>
+      <form action="https://api.web3forms.com/submit" method="POST">
+        <input type="hidden" name="access_key" value="682afe5e-0ab9-4e44-bf75-3af26c905509">
+
         <div class="form-group">
           <label for="name">Name:</label>
           <input type="text" id="name" name="name" required />
@@ -140,7 +142,7 @@
 
       <div class="social">
         <a href="#"><i class="fa-brands fa-youtube"></i></a>
-        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://www.instagram.com/course.zone0786?igsh=MWxvdjl0MGg2MGJiOA=="><i class="fa-brands fa-instagram"></i></a>
       </div>
     </footer>
   </body>
