--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<img src="img/logo.png" alt="PW Logo" class="logo" />
 		</a>
 		<div class="text">
-			<a href="index.html">Course.zone0768</a>
+			<a href="index.html">Course.zone0786</a>
 			<a href="index.html" class="active">Home</a>
 			<a href="About.html">About Us</a>
 			<a href="Connect.html">Connect Us!</a>
@@ -40,7 +40,7 @@
 
 		<div class="social">
 			<a href="#"><i class="fa-brands fa-youtube"></i></i></a>
-			<a href="#"><i class="fa-brands fa-instagram"></i></i></a>
+			<a href="https://www.instagram.com/course.zone0786?igsh=MWxvdjl0MGg2MGJiOA=="><i class="fa-brands fa-instagram"></i></i></a>
 		</div>
 	</footer>
 </body>
