--- a/About.html
+++ b/About.html
@@ -112,7 +112,7 @@
   </head>
   <body>
     <div class="topnav">
-      <a href="#">
+      <a href="index.html">
         <img src="img/logo.png" alt="PW Logo" class="logo" />
       </a>
       <a href="index.html">Course.zone0786</a>
@@ -206,7 +206,7 @@
       </div>
 
       <div class="social">
-        <a href="#"><i class="fa-brands fa-youtube"></i></a>
+        <a href="https://youtube.com/@course.zone0786?si=q2M4_chekR68UfkZ"><i class="fa-brands fa-youtube"></i></a>
         <a href="https://www.instagram.com/course.zone0786?igsh=MWxvdjl0MGg2MGJiOA=="><i class="fa-brands fa-instagram"></i></a>
       </div>
     </footer>
