--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 	<div class="topnav">
-		<a href="#">
+		<a href="index.html">
 			<img src="img/logo.png" alt="PW Logo" class="logo" />
 		</a>
 		<div class="text">
@@ -39,7 +39,7 @@
 		</div>
 
 		<div class="social">
-			<a href="#"><i class="fa-brands fa-youtube"></i></i></a>
+			<a href="https://youtube.com/@course.zone0786?si=q2M4_chekR68UfkZ"><i class="fa-brands fa-youtube"></i></i></a>
 			<a href="https://www.instagram.com/course.zone0786?igsh=MWxvdjl0MGg2MGJiOA=="><i class="fa-brands fa-instagram"></i></i></a>
 		</div>
 	</footer>
