--- a/About.html
+++ b/About.html
@@ -188,7 +188,7 @@
       </table>
 
       <a
-        href="https://pwskills.com/courses/?source=homepage_explore"
+        href="https://linktr.ee/ankitpandit67"
         class="btn"
         >EXPLORE NOW</a
       >
